--- a/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
@@ -46,9 +46,24 @@
             auth_algs={{ wireless.encryption.auth_algs }}
             wpa={{ wireless.encryption.wpa }}
             wpa_key_mgmt={{ wireless.encryption.wpa_key_mgmt }}
-            wpa_passphrase={{ wireless.encryption.wpa_passphrase }}
-            {% if wireless.encryption.wpa_pairwise != 'AUTO' %}
-            wpa_pairwise={{ wireless.encryption.wpa_pairwise }}
+            {% if wireless.encryption.method == 'personal' %}
+                wpa_passphrase={{ wireless.encryption.wpa_passphrase }}
+                {% if wireless.encryption.wpa_pairwise != 'AUTO' %}
+                wpa_pairwise={{ wireless.encryption.wpa_pairwise }}
+                {% endif %}
+            {% elif wireless.encryption.method == 'enterprise'%}
+                ieee8021x=1
+                eap_server=1
+                eapol_version=1
+                {% if wireless.encryption.auth_server_addr %}
+                auth_server_addr={{ wireless.encryption.auth_server_addr }}
+                {% endif %}
+                {% if wireless.encryption.auth_server_port %}
+                auth_server_port={{ wireless.encryption.auth_server_port }}
+                {% endif %}
+                {% if wireless.encryption.auth_server_shared_secret %}
+                auth_server_shared_secret={{ wireless.encryption.auth_server_shared_secret }}
+                {% endif %}
             {% endif %}
         {% endif %}
 
