--- a/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
+++ b/netjsonconfig/backends/raspbian/templates/hostapd.jinja2
@@ -44,26 +44,36 @@
         {% endif %}
         {% if wireless.encryption %}
             auth_algs={{ wireless.encryption.auth_algs }}
-            wpa={{ wireless.encryption.wpa }}
-            wpa_key_mgmt={{ wireless.encryption.wpa_key_mgmt }}
-            {% if wireless.encryption.method == 'personal' %}
-                wpa_passphrase={{ wireless.encryption.wpa_passphrase }}
-                {% if wireless.encryption.wpa_pairwise != 'AUTO' %}
-                wpa_pairwise={{ wireless.encryption.wpa_pairwise }}
+            {% if wireless.encryption.protocol == 'wpa' %}
+                wpa={{ wireless.encryption.wpa }}
+                wpa_key_mgmt={{ wireless.encryption.wpa_key_mgmt }}
+                {% if wireless.encryption.method == 'personal' %}
+                    wpa_passphrase={{ wireless.encryption.wpa_passphrase }}
+                    {% if wireless.encryption.cipher != 'AUTO' %}
+                        {% if wireless.encryption.wpa == '1' %}
+                        wpa_pairwise={{ wireless.encryption.cipher }}
+                        {% endif %}
+                        {% if wireless.encryption.wpa == '2' %}
+                        rsn_pairwise={{ wireless.encryption.cipher }}
+                        {% endif %}
+                    {% endif %}
+                {% elif wireless.encryption.method == 'enterprise'%}
+                    ieee8021x=1
+                    eap_server=1
+                    eapol_version=1
+                    {% if wireless.encryption.auth_server_addr %}
+                    auth_server_addr={{ wireless.encryption.auth_server_addr }}
+                    {% endif %}
+                    {% if wireless.encryption.auth_server_port %}
+                    auth_server_port={{ wireless.encryption.auth_server_port }}
+                    {% endif %}
+                    {% if wireless.encryption.auth_server_shared_secret %}
+                    auth_server_shared_secret={{ wireless.encryption.auth_server_shared_secret }}
+                    {% endif %}
                 {% endif %}
-            {% elif wireless.encryption.method == 'enterprise'%}
-                ieee8021x=1
-                eap_server=1
-                eapol_version=1
-                {% if wireless.encryption.auth_server_addr %}
-                auth_server_addr={{ wireless.encryption.auth_server_addr }}
-                {% endif %}
-                {% if wireless.encryption.auth_server_port %}
-                auth_server_port={{ wireless.encryption.auth_server_port }}
-                {% endif %}
-                {% if wireless.encryption.auth_server_shared_secret %}
-                auth_server_shared_secret={{ wireless.encryption.auth_server_shared_secret }}
-                {% endif %}
+            {% elif wireless.encryption.protocol == 'wep' %}
+            wep_default_key=0
+            wep_key0={{ wireless.encryption.key}}
             {% endif %}
         {% endif %}
 
